--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,22 @@
     <string name="giphy_api_token">Cb3k2zOhaWFG6E7noZRCSeNl1WztxnfC</string>
     <string name="searchView_hint">Character, Location, Episode, bla bla ..</string>
     <string name="characterButtonText">Characters</string>
-    <string name="locationButtonText">Locations</string>
-    <string name="episodesButtonText">Episodes</string>
+    <string name="locationButtonText">Favourites</string>
 
     <string name="tab_1">Characters</string>
-    <string name="tab_2">Locations</string>
-    <string name="tab_3">Episodes</string>
+    <string name="tab_2">Favourites</string>
+
+
+    <string-array name="sort_array">
+        <item>All</item>
+        <item>Alive</item>
+        <item>Dead</item>
+        <item>Unknown</item>
+    </string-array>
+
+    <string name="alive">alive</string>
+    <string name="dead">dead</string>
+    <string name="unknown">unknown</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
